# rust_introduction

./: Cargo.toml  README.md
src/: main.rs
src/04_primitive/: compound.rs  scalar.rs
src/05_user_defined_types/: 01_main_types.rs  02_string.rs  03_option.rs  04_result.rs  05_alias.rs  06_struct.rs
src/06_basic/: 01_if.rs  02_match.rs  03_mod.rs
src/07_ownership/: 01_value_ownership.rs  03_copy.rs  04_borrow.rs
src/08_trait/: 01_trait_basic.rs  02_trait_generics.rs  03_dispatch.rs
src/ch07_ownership/: Cargo.toml
src/ch07_ownership/examples/: toy_vec_01.rs
src/ch07_ownership/src/: lib.rs
