[package]
name = "rust_introduction"
version = "0.1.0"
authors = ["Kodai Nakamura <kodai.nakamura.215@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "scalar"
path = "src/04_primitive/scalar.rs"

[[bin]]
name = "compound"
path = "src/04_primitive/compound.rs"
