[package]
name = "rust_introduction"
version = "0.1.0"
authors = ["Kodai Nakamura <kodai.nakamura.215@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "scalar"
path = "src/04_primitive/scalar.rs"

[[bin]]
name = "compound"
path = "src/04_primitive/compound.rs"

[[bin]]
name = "main_types"
path = "src/05_user_defined_types/01_main_types.rs"

[[bin]]
name = "string"
path = "src/05_user_defined_types/02_string.rs"

[[bin]]
name = "option"
path = "src/05_user_defined_types/03_option.rs"

[[bin]]
name = "result"
path = "src/05_user_defined_types/04_result.rs"

[[bin]]
name = "alias"
path = "src/05_user_defined_types/05_alias.rs"

[[bin]]
name = "struct"
path = "src/05_user_defined_types/06_struct.rs"

[[bin]]
name = "if"
path = "src/06_basic/01_if.rs"

[[bin]]
name = "match"
path = "src/06_basic/02_match.rs"

[[bin]]
name = "mod"
path = "src/06_basic/03_mod.rs"
